--- a/styles/index.css
+++ b/styles/index.css
@@ -154,11 +154,16 @@ a {
   display: flex;
   flex-direction: row;
 
-  gap: 16px;
+  justify-content: center;
+  align-items: center;
+
+  gap: 64px;
   text-align: center;
 }
 
 .card {
+  width: 150px;
+
   display: flex;
   flex-direction: column;
 
@@ -169,8 +174,8 @@ a {
 }
 
 .card-image {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
 
   border: 4px solid #3b82f6;
   border-radius: 16px;
@@ -182,9 +187,18 @@ a {
   padding-top: 64px;
   padding-bottom: 64px;
 
-  font-size: 36px;
-  font-weight: lighter;
-  font-style: italic;
-
   color: #1f2937;
+}
+
+.quote-content {
+  font-size: 36px;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.quote-author {
+  text-align: right;
+
+  font-weight: bolder;
+  font-size: 16px;
 }
