--- a/styles/index.css
+++ b/styles/index.css
@@ -81,12 +81,24 @@ a {
   gap: 16px;
 }
 
+.link:hover {
+  color: #a3a3a3;
+  transition: 0.1s;
+}
+
+.link:active {
+  color: #686868;
+  transition: 0.2s;
+}
+
 .intro {
   display: flex;
   flex-direction: row;
 
   padding-top: 64px;
   padding-bottom: 64px;
+
+  min-height: 300px;
 }
 
 .intro-content {
@@ -105,7 +117,7 @@ a {
 .intro-subtext {
   font-size: 18px;
 
-  padding-bottom: 8px;
+  padding-bottom: 16px;
 }
 
 .intro-image {
@@ -134,6 +146,16 @@ a {
 
   font-size: 18px;
   font-weight: bold;
+}
+
+.intro-button:hover {
+  background-color: #2d68c5;
+  transition: 0.1s;
+}
+
+.intro-button:active {
+  background-color: #1b3d74;
+  transition: 0.2s;
 }
 
 .info {
@@ -201,4 +223,81 @@ a {
 
   font-weight: bolder;
   font-size: 16px;
+}
+
+.register {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+.register-container {
+  background-color: #3b82f6;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  padding-left: 10%;
+  padding-right: 10%;
+
+  border-radius: 16px;
+
+  color: white;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.register-header {
+  font-size: 24px;
+  font-weight: bolder;
+
+  margin-bottom: 0;
+}
+
+.register-subtext {
+  margin-top: 0;
+}
+
+.register-button {
+  flex: 1;
+
+  display: flex;
+
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.register-btn {
+  padding: 8px;
+  padding-left: 32px;
+  padding-right: 32px;
+
+  color: white;
+
+  background-color: #3b82f6;
+  border: 2px solid white;
+
+  border-radius: 8px;
+}
+
+.register-btn:hover {
+  background-color: #2d68c5;
+  transition: 0.1s;
+}
+
+.register-btn:active {
+  background-color: #1b3d74;
+  transition: 0.2s;
+}
+
+.footer {
+  height: 128px;
+
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+  font-size: 18px;
+  font-weight: bold;
 }
